--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Stream audio input to a local Chromecast device from any unix based os.",
   "preferGlobal": true,
   "main": "index.js",
+  "scripts": {
+     "start": "node index.js"
+  },
   "author": "KeizerDev",
   "license": "BSD",
   "keywords": [
